k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: demo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-api
  template:
    metadata:
      labels:
        app: demo-api
    spec:
      serviceAccountName: demo-api-sa
      containers:
        - name: demo-api
          image: lukaszsel/demo-lambda-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
