k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: demo-api
spec:
  selector:
    app: demo-api
  ports:
    - port: 80
      targetPort: 8000
